tests/should-fail/syntax/native-after-function.j
function foo takes nothing returns nothing
endfunction

native bar takes nothing returns nothing